<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies -->
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.cjrequena.sample</groupId>
    <artifactId>spring-boot-samples</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>spring-boot-samples</name>
    <description>spring-boot-samples</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.version>3.9.9</maven.version>
        <maven.version>3.9.9</maven.version>
        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webflux-ui -->
        <springdoc.version>2.8.13</springdoc.version>
        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
        <org.mapstruct.version>1.6.3</org.mapstruct.version>
        <!-- https://mvnrepository.com/artifact/org.apache.johnzon/johnzon-core -->
        <johnzon-core.version>2.0.2</johnzon-core.version>
        <!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
    </properties>
    <modules>
        <module>spring-boot-data-jpa-h2-sample</module>
        <module>spring-boot-data-jpa-postgres-sample</module>
        <module>spring-boot-data-redis-sample</module>
        <module>spring-boot-data-mongodb-sample</module>
        <module>spring-boot-api-key-sample</module>
        <module>spring-boot-webflux-security-basic-auth-sample</module>
        <module>spring-boot-mvc-security-h2-basic-auth-sample</module>
        <module>spring-boot-web-security-h2-jwt-auth-sample</module>
        <module>spring-boot-micrometer-datadog-sample</module>
        <module>spring-boot-data-jpa-h2-cqengine-sample</module>
        <module>spring-boot-websocket-sample</module>
        <module>spring-boot-hexagonal-pattern-sample</module>
        <module>spring-boot-drools-sample</module>
        <module>spring-boot-easy-rules-sample</module>
        <module>spring-boot-tdd-sample</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>false</showWarnings>
                    <showDeprecation>false</showDeprecation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <delimiters>
                        <delimiter>${*}</delimiter>
                        <delimiter>@</delimiter>
                    </delimiters>
                </configuration>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[${java.version},)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
